--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@ wheels/
 
 # Environment variables
 .env
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
